--- a/index.html
+++ b/index.html
@@ -5,42 +5,40 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.0.min.js" type="text/javascript" charset="utf-8"></script>
 
-  <!-- <link href="video-js.min.css" rel="application/stylesheet"> -->
+  <!-- I'M NOT ABLE TO LINK EXTERNAL STYLESHEETS
+  <link href="video-js.min.css" rel="application/stylesheet">
   <script src="video.min.js"></script>
   <script src="RecordRTC.js"></script>
-  <script src="videojs.record.js"></script>
-
-
-  <!-- <script src="../node_modules/video.js/dist/video.min.js"></script>
-  <script src="//cdn.webrtc-experiment.com/RecordRTC.js"></script>
-
-  <script src="../src/js/videojs.record.js"></script> -->
-  <!-- <script src="video.min.js"></script>
-  <script src="RecordRTC.js"></script>
   <script src="videojs.record.js"></script> -->
+
 
   <title>WebSockets Demo</title>
 
 </head>
+
 <body>
   <h1>Heart Rate WebSocket Demo</h1>
 
+  <!-- CODE FROM DEMO -->
   <!-- <form class="submit-message" method="post">
     <input type="text" name="" id="my-message" value="" />
     <input type="submit" name="" id="" value="Submit" />
   </form> -->
 
+  <!-- VIDEO FILE INPUT-->
   <input type="file" accept="video/*;capture=camcorder">
 
-  <video id="myVideo" class="video-js vjs-default-skin"></video>
+  <!-- SHOULD RECORD VIDEO FROM WEBCAM BUT DOESN'T WORK BECAUSE I CAN'T IMPORT
+  JAVASCRIPT LIBRARIES
+  <video id="myVideo" class="video-js vjs-default-skin"></video> -->
 
+  <!-- CALLS SERVER -->
   <form class="submit-message" method="post">
     <input type="submit" value="Start">
   </form>
 
-
+  <!-- DISPLAYS HEART RATES -->
   <div class="messages"></div>
-
 
   </body>
 </html>
@@ -51,25 +49,24 @@
 (function(){
   // var socket = io.connect('http://128.237.173.15:8888');
   // var io = require('socket.io-client');
+
+  // CHANGE THIS IP ADDRESS TO YOUR LOCAL ONE
   var socket = io.connect('http://128.237.221.24:8080');
 
   $('.submit-message').submit(function(event){
     event.preventDefault();
 
-    // $('.messages').append('<p>' + $('#my-message').val() + '</p>');
-    // socket.emit('message', 'client says: ' + $('#my-message').val());
-    // $('#my-message').val('');
-    // while(true){
-    //   socket.emit('message', 'client: frames');
-    //   sleep()
-    // }
     setInterval(function() {
       // method to be executed;
+      // SENDS A STRING (client: frames) OF TYPE message TO SERVER
+      // EVERY THREE SECONDS (3000)
       socket.emit('message', 'client: frames');
     }, 3000);
 
   });
 
+  // RECEIVES DATA (random bpm) FROM SERVER AND SHOWS IT IN
+  // ABOVE MESSAGES DIV
   socket.on('message', function (data) {
       $('.messages').append('<p>' + data.test + '</p>');
   });
